--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ apply plugin: 'kotlin-android-extensions'
 // dependency is required
 apply plugin: 'android-native-dependencies'
 native_dependencies {
-    artifact 'io.spokestack:spokestack-android:5.0.0'
+    artifact 'io.spokestack:spokestack-android:5.6.0'
 }
 
 android {
     // substitute with your installed version
     ndkVersion "21.0.6113669"
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
 
     // necessary for some Java 8 syntax used by Spokestack and dependencies
     compileOptions {
@@ -51,14 +51,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // base Spokestack dependency
-    implementation 'io.spokestack:spokestack-android:5.0.0'
+    implementation 'io.spokestack:spokestack-android:5.6.0'
 
     // Note: This project includes the optional dependencies required to use every external
     // service provider supported by Spokestack at the time of writing. They're labeled by
@@ -72,12 +72,12 @@ dependencies {
 
     // Google Cloud Speech
     implementation 'com.google.cloud:google-cloud-speech:1.22.2'
-    implementation 'io.grpc:grpc-okhttp:1.25.0'
+    implementation 'io.grpc:grpc-okhttp:1.28.1'
 
     // Azure ASR
     implementation 'com.microsoft.cognitiveservices.speech:client-sdk:1.9.0'
 
-    // TFLite wakeword
+    // TFLite wakeword and NLU
     // Note: stick with a pre-2.0 TensorFlow version for now
     implementation 'org.tensorflow:tensorflow-lite:1.14.0'
 }
