--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -56,16 +56,19 @@ dependencies {
     // Also be sure to check for new versions of these dependencies.
 
     // automatic tts playback (via a Spokestack-managed ExoPlayer)
-    implementation 'androidx.media:media:1.2.1'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.11.7'
+    implementation 'androidx.media:media:1.3.0'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.13.3'
 
     // Google Cloud Speech
-    implementation 'com.google.cloud:google-cloud-speech:1.22.2'
-    implementation 'io.grpc:grpc-okhttp:1.28.1'
+    implementation('com.google.cloud:google-cloud-speech:1.27.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'commons-logging'
+    }
+    implementation 'io.grpc:grpc-okhttp:1.37.0'
 
     // Azure ASR
     implementation 'com.microsoft.cognitiveservices.speech:client-sdk:1.9.0'
 
     // TFLite wakeword and NLU
-    implementation 'org.tensorflow:tensorflow-lite:2.3.0'
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
 }
